Form and translation change

--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -1,6 +1,6 @@
 {
     "title": "Co ja ze sobą zrobię",
-    "question": "Do jakiej uczelni pójdziesz?",
+    "question": "Jaką uczelnię wybierzesz?",
     "f1": "Wybierz profil",
     "f2": "Wybierz miasto",
     "f3": "Wybierz stopień",
