--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-    "title": "What am I going to do with myself?",
+    "title": "What should I do ?",
     "question": "Which university are you going to choose?",
     "f1": "Choose a profile",
     "f2": "Choose a city",
