--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -1,5 +1,5 @@
 {
-    "title": "Co ja ze sobą zrobię",
+    "title": "Co ja ze sobą zrobię?",
     "question": "Jaką uczelnię wybierzesz?",
     "f1": "Wybierz profil",
     "f2": "Wybierz miasto",
