Field and translation changes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,7 @@
     "title": "What should I do ?",
     "question": "Which university are you going to choose?",
     "f1": "Choose a discipline",
-    "f2": "Choose if stationary/online",
+    "f2": "Choose an university",
     "f3": "Choose a degree",
     "IT": "Computer Science",
     "law": "Law",
@@ -11,6 +11,7 @@
     "ma": "Master",
     "q2": "Should you get teacher's qualifications?",
     "q3": "Should the studies be dual?",
+    "q4": "Should the studies be remote?",
     "pol": "Polish",
     "eng": "English",
     "selectc": "Select language",
