--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -2,15 +2,16 @@
     "title": "Co ja ze sobą zrobię?",
     "question": "Jaką uczelnię wybierzesz?",
     "f1": "Wybierz dyscyplinę",
-    "f2": "Wybierz tryb nauczania",
+    "f2": "Wybierz uczelnię",
     "f3": "Wybierz stopień",
     "IT": "Informatyka",
     "law": "Prawo",
     "aut": "Automatyka",
     "ba": "Licencjackie",
     "ma": "Magisterskie",
-    "q2": "Czy studia mają zapewnić kwalifikacje nauczycielskie?",
+    "q2": "Czy studia zapewnią kwalifikacje nauczycielskie?",
     "q3": "Czy studia mają być dualne?",
+    "q4": "Czy studia mają być zdalne?",
     "pol": "Polski",
     "eng": "Angielski",
     "selectc": "Wybierz język",
